--- a/cmake_qt6_console_app/CMakeLists.txt
+++ b/cmake_qt6_console_app/CMakeLists.txt
@@ -9,6 +9,15 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_PREFIX_PATH /opt/Qt/6.2.4/gcc_64)
 
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Quick)
+#find files
+find_package(OpenCV REQUIRED)
+
+#添加OpenCV头文件
+include_directories(${OpenCV_INCLUDE_DIRS})
+
+#显示OpenCV_INCLUDE_DIRS的值
+message(${OpenCV_INCLUDE_DIRS})
+
 # if >=qt6.3
 # qt_standard_project_setup()
 
@@ -16,4 +25,6 @@ qt_add_executable(helloworld
     main.cpp
 )
 
-target_link_libraries(helloworld PRIVATE Qt6::Core Qt6::Gui Qt6::Quick)
+# 将库文件链接到可执行程序上
+target_link_libraries(helloworld PRIVATE Qt6::Core Qt6::Gui Qt6::Quick ${OpenCV_LIBS})
+
